<resources>
    <string name="app_name">Club Union</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="login_username">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="action_sign_in">Registro</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">El usuario es incorrecto</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="forgot_your_password">¿Olvido su contraseña?</string>
</resources>
